* Improved compatibility with "Direct-to-wire" streams which do things differently than Blue Iris's web server encoder. * Fixed issue with rendering the color input field too small in the Streaming Profile editor.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -5027,6 +5027,11 @@ body + div
 	{
 		box-sizing: border-box;
 		height: 28px;
+	}
+
+	.dialogOptionPanel .textBasedInput input[type="text"],
+	.dialogOptionPanel .textBasedInput input[type="password"]
+	{
 		width: 100% !important;
 	}
 
